--- a/views/include/_hero.ejs
+++ b/views/include/_hero.ejs
@@ -22,8 +22,9 @@
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
             </p>
 
-            <button class="btn">Make An Enquiry</button>
-
+            <a href="/create-apartment">
+            <button class="btn">Create A Post</button>
+          </a>
           </div>
 
           <figure class="hero-banner">
