--- a/views/profile-admin.ejs
+++ b/views/profile-admin.ejs
@@ -29,6 +29,7 @@
     <% } %>
     <span></span>
 </div>
+
         <h2><%= users.fullname %></h2>
         <p><%= '@' + users.username %></p>
         <p><%= users.email %></p>
@@ -64,7 +65,7 @@
               <li><a href="">posts</a></li>
               <li><a href="">galleries</a></li>
               <li><a href="/admin-home">home</a></li>
-              <li><a href="">about</a></li>
+              <li><a href="/create-apartment">create post</a></li>
             </ul>
             <button>Follow</button>
           </nav>
