--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -49,15 +49,15 @@
                 <div class="card-content">
 
                   <div class="card-price">
-                    <strong>$34,900</strong>/Month
+                    <strong><%= apartment.price %></strong>/Month
                   </div>
 
                   <h3 class="h3 card-title">
-                    <a href="#">New Apartment Nice View</a>
+                    <a href="#"><%= apartment.title %></a>
                   </h3>
 
                   <p class="card-text">
-                    Beautiful Huge 1 Family House In Heart Of Westbury. Newly Renovated With New Wood
+                    <%= apartment.description %>
                   </p>
 
                   <ul class="card-list">
@@ -67,7 +67,7 @@
 
                       <ion-icon name="bed-outline"></ion-icon>
 
-                      <span>Bedrooms</span>
+                      <span><%= apartment.bedrooms %></span>
                     </li>
 
                     <li class="card-item">
@@ -75,7 +75,7 @@
 
                       <ion-icon name="man-outline"></ion-icon>
 
-                      <span>Bathrooms</span>
+                      <span><%= apartment.bathrooms %></span>
                     </li>
 
                     <li class="card-item">
@@ -95,15 +95,21 @@
                   <div class="card-author">
 
                     <figure class="author-avatar">
-                      <img src="./images/author.jpg" alt="William Seklo" class="w-100">
+                      <% if (user.photo) { %>
+                        <img src="<%= relativePath %>" alt="profile" />
+                    <% } else { %>
+                        <!-- Default image placeholder if photo doesn't exist -->
+                        <img src="/path/to/default/image.jpg" alt="profile" />
+                    <% } %>
+                      <!-- <img src="./images/author.jpg" alt="William Seklo" class="w-100"> -->
                     </figure>
 
                     <div>
                       <p class="author-name">
-                        <a href="#">William Seklo</a>
+                        <a href="#"><%= user.fullname %></a>
                       </p>
 
-                      <p class="author-title">Estate Agents</p>
+                      <p class="author-title"><%= user.bio %></p>
                     </div>
 
                   </div>
@@ -129,7 +135,8 @@
               </div>
             </li>
 
-            <li>
+
+            <!-- <li>
               <div class="property-card">
 
                 <figure class="card-banner">
@@ -481,7 +488,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
           </ul>
 
