--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -64,7 +64,7 @@
               <li><a href="">posts</a></li>
               <li><a href="">galleries</a></li>
               <li><a href="/home">home</a></li>
-              <li><a href="">about</a></li>
+              <li><a href="/create-apartment">create post</a></li>
             </ul>
             <button>Follow</button>
           </nav>
