--- a/views/include/_header.ejs
+++ b/views/include/_header.ejs
@@ -73,7 +73,7 @@
             <a href="#" class="header-top-link">
               <!-- <ion-icon name="location-outline"></ion-icon> -->
 
-              <span><%= greeting %> <%= user ? user.username : '' %></span>
+              <span><%= greeting %>, <%= user ? user.role : '' %> | <%= user ? user.username : '' %></span>
             </a>
           </li>
 
