--- a/views/index-admin.ejs
+++ b/views/index-admin.ejs
@@ -3,7 +3,7 @@
   <!-- /include header -->
     
   <!-- include hero -->
-  <%- include('include/_hero') %>
+  <%- include('include/_hero-admin') %>
   <!-- /include hero -->   
   
   <!-- include about -->
