--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,6 +42,7 @@
                 <input type="text" name="fullname" placeholder="Full Name" required>
                 <input type="text" name="username" placeholder="Username" required>
                 <input type="email" name="email" placeholder="Email" required>
+                <input type="text" name="phone" placeholder="Phone Number" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
                 <!-- Add the file input for photo upload -->
                 <input type="file" name="photo" accept="image/*">
