--- a/public/css/login.css
+++ b/public/css/login.css
@@ -24,8 +24,8 @@ body{
     position: relative;
     overflow: hidden;
     width: 768px;
-    max-width: 160%;
-    min-height: 580px;
+    max-width: 200%; /*160*/
+    min-height: 620px; 
 }
 
 @media only screen and (max-width: 768px) {
