--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -13,127 +13,89 @@
 
             <li>
               <div class="property-card">
-
                 <figure class="card-banner">
-
+                  <!-- Dynamic image source -->
                   <a href="#">
-                    <img src="./images/property-1.jpg" alt="New Apartment Nice View" class="w-100">
+                    <img src="<%= apartments.photo %>" alt="<%= apartments.title %>" class="w-100">
                   </a>
-
-                  <div class="card-badge green">For Rent</div>
-
+                  <!-- Dynamic badge indicating status (e.g., For Rent, For Sale) -->
+                  <div class="card-badge green"><%= apartments.status %></div>
                   <div class="banner-actions">
-
+                    <!-- Button with location information -->
                     <button class="banner-actions-btn">
                       <ion-icon name="location"></ion-icon>
-
-                      <address>Belmont Gardens, Chicago</address>
+                      <address><%= apartments.location %></address>
                     </button>
-
+                    <!-- Button with number of bedrooms -->
                     <button class="banner-actions-btn">
-                      <ion-icon name="camera"></ion-icon>
-
-                      <span>4</span>
-                    </button>
-
-                    <button class="banner-actions-btn">
-                      <ion-icon name="film"></ion-icon>
-
-                      <span>2</span>
-                    </button>
-
-                  </div>
-
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="card-price">
-                    <strong><%= apartment.price %></strong>/Month
-                  </div>
-
-                  <h3 class="h3 card-title">
-                    <a href="#"><%= apartment.title %></a>
-                  </h3>
-
-                  <p class="card-text">
-                    <%= apartment.description %>
-                  </p>
-
-                  <ul class="card-list">
-
-                    <li class="card-item">
-                      <strong>3</strong>
-
                       <ion-icon name="bed-outline"></ion-icon>
-
-                      <span><%= apartment.bedrooms %></span>
-                    </li>
-
-                    <li class="card-item">
-                      <strong>2</strong>
-
+                      <span><%= apartments.bedrooms %></span>
+                    </button>
+                    <!-- Button with number of bathrooms -->
+                    <button class="banner-actions-btn">
                       <ion-icon name="man-outline"></ion-icon>
-
-                      <span><%= apartment.bathrooms %></span>
-                    </li>
-
+                      <span><%= apartments.bathrooms %></span>
+                    </button>
+                  </div>
+                </figure>
+                <div class="card-content">
+                  <!-- Dynamic price -->
+                  <div class="card-price">
+                    <strong><%= apartments.price %></strong>/Month
+                  </div>
+                  <!-- Dynamic title -->
+                  <h3 class="h3 card-title">
+                    <a href="#"><%= apartments.title %></a>
+                  </h3>
+                  <!-- Dynamic description -->
+                  <p class="card-text">
+                    <%= apartments.description %>
+                  </p>
+                  <ul class="card-list">
+                    <!-- Placeholder for square footage -->
                     <li class="card-item">
                       <strong>3450</strong>
-
                       <ion-icon name="square-outline"></ion-icon>
-
                       <span>Square Ft</span>
                     </li>
-
                   </ul>
-
                 </div>
-
                 <div class="card-footer">
-
                   <div class="card-author">
-
                     <figure class="author-avatar">
+                      <!-- Dynamic user photo -->
                       <% if (user.photo) { %>
                         <img src="<%= relativePath %>" alt="profile" />
-                    <% } else { %>
+                      <% } else { %>
                         <!-- Default image placeholder if photo doesn't exist -->
                         <img src="/path/to/default/image.jpg" alt="profile" />
-                    <% } %>
-                      <!-- <img src="./images/author.jpg" alt="William Seklo" class="w-100"> -->
+                      <% } %>
                     </figure>
-
                     <div>
+                      <!-- Dynamic user fullname -->
                       <p class="author-name">
                         <a href="#"><%= user.fullname %></a>
                       </p>
-
+                      <!-- Dynamic user bio -->
                       <p class="author-title"><%= user.bio %></p>
                     </div>
-
                   </div>
-
                   <div class="card-footer-actions">
-
+                    <!-- Action buttons (placeholders) -->
                     <button class="card-footer-actions-btn">
                       <ion-icon name="resize-outline"></ion-icon>
                     </button>
-
                     <button class="card-footer-actions-btn">
                       <ion-icon name="heart-outline"></ion-icon>
                     </button>
-
                     <button class="card-footer-actions-btn">
                       <ion-icon name="add-circle-outline"></ion-icon>
                     </button>
-
                   </div>
-
                 </div>
-
               </div>
             </li>
+            
 
 
             <!-- <li>
