--- a/views/include/_form-style.ejs
+++ b/views/include/_form-style.ejs
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -152,3 +153,4 @@ select.formbold-form-input,
     }
   }
 
+</style>
