--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -155,7 +155,7 @@
               </li>
 
               <li>
-                <a href="/all-properties" class="navbar-link" data-nav-link>Property</a>
+                <a href="/all-admin-properties" class="navbar-link" data-nav-link>Property</a>
               </li>
 
               <li>
