--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -26,6 +26,10 @@
             <button class="btn">Create A Post</button>
           </a>
 
+          <a href="/all-apartments">
+            <button class="btn">All Apartments</button>
+          </a>
+
           <a href="/all-user">
             <button class="btn">All Users</button>
           </a>
