--- a/views/success/users.ejs
+++ b/views/success/users.ejs
@@ -29,7 +29,7 @@
 }
 
 .success-message h1 {
-    color: #4CAF50;
+    color: hsl(9, 100%, 62%);;
 }
 
 .add-another-reception {
@@ -39,7 +39,7 @@
 .add-another-reception a {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: hsl(9, 100%, 62%);;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -47,7 +47,7 @@
 }
 
 .add-another-reception a:hover {
-    background-color: #45a049;
+    background-color: hsl(9, 83%, 55%);
 }
     </style>
 </head>
