--- a/views/update-admin-apartment.ejs
+++ b/views/update-admin-apartment.ejs
@@ -1,16 +1,11 @@
-  <!-- include header -->
-  <%- include('include/_header') %>
-  <!-- /include header -->
+  <!-- include style -->
+  <%- include('include/_style') %>
+  <!-- /include style -->
+ 
+ <!-- include form-style -->
+  <%- include('include/_form-style') %>
+  <!-- /include form-style -->
 
 <!-- include post-apartment -->
 <%- include('include/_update-admin-apartment') %>
-<!-- /include post-apartment -->
-
-<!-- include cta -->
-<%- include('include/_cta') %>
-<!-- /include cta -->
-
-
-<!-- include footer -->
-<%- include('include/_footer') %>
-<!-- /include footer -->
+<!-- /include post-apartment --> 
