--- a/views/include/_all-apartments.ejs
+++ b/views/include/_all-apartments.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All users</title>
+    <title>All Apartments</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -82,35 +82,37 @@
     }
   </style>
 <body>
-    <h2>All Users</h2>
+    <h2>All Apartments</h2>
     <div class="table-wrapper">
         <table class="fl-table">
             <thead>
             <tr>
-                <th>Fullname</th>
-                <th>Username</th>
+                <th>AID</th>
+                <th>Created by</th>
+                <th>Title</th>
                 <th>Phone No.</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Sudo</th>
-                <th>Status</th>
+                <th>Location</th>
+                <th>address</th>
+                <th>Avaliablity</th>
+                <th>Verification</th>
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
             <tbody>
-                <% data.forEach(user => { %>
+                <% apartments.forEach(apartment => { %>
             <tr>
-                <td class="hover"><%= user.fullname %></td>
-                <td class="hover"><%= user.username %></td>
-                <td class="hover"><%= user.phone %></td>
-                <td class="hover"><%= user.email %></td>
-                <td class="hover <%= user.role === 'admin' ? 'role-pink-bg' : (user.role === 'user' ? 'role-green-bg' : '') %>"><%= user.role %></td>
-                <td class="hover"><%= user.sudo %></td>
-                <td class="hover <%= user.status === 'active' ? 'status-green-bg' : (user.status === 'inactive' ? 'status-red-bg' : '') %>"><%= user.status %></td>
+                <td class="hover"><%= apartment.aid %></td>
+                <td class="hover"><%= apartment.createdBy %></td>
+                <td class="hover"><%= apartment.title %></td>
+                <td class="hover"><%= apartment.phone %></td>
+                <td class="hover"><%= apartment.location %></td>
+                <td class="hover"><%= apartment.address %></td>
+                <td class="hover"><%= apartment.availabilty %></td>
+                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
-                    <a href="/edit-user/<%= user._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
+                    <a href="/edit-admin-apartment/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteUser('<%= user._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
                     <a href="/view/<%= user._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
