--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -182,7 +182,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 <a href="#">Real Leone</a>. All Rights Reserved || Logged in as <a href="#">Admin</a> - <%= user ? user.fullname : '' %> || <a href="/logout">Logout</a>
+          &copy; 2024 <a href="#">Real Leone</a>. All Rights Reserved || Logged in as <a href="#"><%= user ? user.role : '' %></a> - <%= user ? user.fullname : '' %> || <a href="/logout">Logout</a>
         </p>
 
       </div>
