--- a/views/profile-admin.ejs
+++ b/views/profile-admin.ejs
@@ -64,7 +64,7 @@
             <ul>
               <li><a href="">posts</a></li>
               <li><a href="">galleries</a></li>
-              <li><a href="/admin-home">home</a></li>
+              <li><a href=""onclick="goBack()">home</a></li>
               <li><a href="/create-apartment">create post</a></li>
             </ul>
             <button>Follow</button>
