--- a/views/success/delete-user.ejs
+++ b/views/success/delete-user.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/success.css">
-    <title>Profile Success</title>
+    <title>Delete User</title>
 
     <style>
         body {
@@ -54,8 +54,8 @@
 <body>
     <div class="container">
         <div class="success-message">
-            <h1>Profile Updated Successfully!</h1>
-            <p>Your profile details have been successfully updated.</p>
+            <h1>User Delelted Successfully!</h1>
+            <p>User details have been deleted successfully.</p>
         </div>
         <div class="add-another-reception">
             <a href="#" onclick="goBack()">Go Back</a>
