--- a/views/edit-application.ejs
+++ b/views/edit-application.ejs
@@ -6,6 +6,6 @@
   <%- include('include/_form-style') %>
   <!-- /include form-style -->
 
-<!-- include edit user -->
-<%- include('include/_edit-user') %>
-<!-- /include edit user -->
+<!-- include edit application -->
+<%- include('include/_edit-application') %>
+<!-- /include edit application -->
