--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -30,6 +30,10 @@
             <button class="btn">All Apartments</button>
           </a>
 
+          <a href="/all-applications">
+            <button class="btn">All Applications</button>
+          </a>
+
           <a href="/all-user">
             <button class="btn">All Users</button>
           </a>
