--- a/views/include/_all-properties.ejs
+++ b/views/include/_all-properties.ejs
@@ -55,9 +55,9 @@
                   <ul class="card-list">
                     <!-- Placeholder for square footage -->
                     <li class="card-item">
-                      <strong>3450</strong>
-                      <ion-icon name="square-outline"></ion-icon>
-                      <span>Square Ft</span>
+                      <strong>Contact site</strong>
+                      <!-- <ion-icon name="square-outline"></ion-icon> -->
+                      <a href="/application-form"><span>Administrator</span></a>
                     </li>
                   </ul>
                 </div>
