update all files

--- a/views/include/_all-apartments.ejs
+++ b/views/include/_all-apartments.ejs
@@ -108,13 +108,13 @@
                 <td class="hover"><%= apartment.location %></td>
                 <td class="hover"><%= apartment.address %></td>
                 <td class="hover"><%= apartment.availabilty %></td>
-                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
+                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not-verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
                     <a href="/edit-admin-apartment/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
                     <a href="#" onclick="deleteUser('<%= user._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
-                    <a href="/view/<%= user._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
+                    <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
             </tr>
