--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -70,7 +70,7 @@
           </li> -->
 
           <li>
-            <a href="#" class="header-top-link">
+            <a href="/administrator" class="header-top-link">
               <ion-icon name=""></ion-icon>
 
               <span><%= greeting %> Administrator | <%= user ? user.username : '' %></span>
