--- a/views/include/_hero-admin.ejs
+++ b/views/include/_hero-admin.ejs
@@ -26,7 +26,7 @@
             <button class="btn">Create A Post</button>
           </a>
 
-          <a href="/all-apartments">
+          <!-- <a href="/all-apartments">
             <button class="btn">All Apartments</button>
           </a>
 
@@ -34,9 +34,9 @@
             <button class="btn">All Applications</button>
           </a>
 
-          <a href="/all-user">
+          <a href="/all-users">
             <button class="btn">All Users</button>
-          </a>
+          </a> -->
           </div>
 
           <figure class="hero-banner">
