--- a/views/include/_update-admin-apartment.ejs
+++ b/views/include/_update-admin-apartment.ejs
@@ -210,13 +210,13 @@
         </select>
         </div>
 
-        <div>
+        <!-- <div>
           <label for="verification" class="formbold-form-label"> Verification </label>
           <select id="verification" class="formbold-form-input" name="verification">
             <option value="verified">Verified</option>
             <option value="not-verified">Not Verified</option>
         </select>
-        </div>
+        </div> -->
 
       </div>
 
