--- a/views/include/_verify-apartment.ejs
+++ b/views/include/_verify-apartment.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Application</title>
+    <title>All Apartments</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -82,33 +82,31 @@
     }
   </style>
 <body>
-    <h2>All Applications</h2>
+    <h2>Apartments Verification</h2>
     <div class="table-wrapper">
         <table class="fl-table">
             <thead>
             <tr>
-                <th>Full Name</th>
-                <th>Username</th>
+                <th>Created by</th>
                 <th>Phone No.</th>
-                <th>Apartment Location</th>
-                <th>Address</th>
+                <th>Location</th>
+                <th>Verification</th>
                 <th>Actions</th> <!-- New column for actions -->
             </tr>
             </thead>
             <tbody>
-                <% apply.forEach(apply => { %>
+                <% apartments.forEach(apartment => { %>
             <tr>
-                <td class="hover"><%= apply.createdBy %></td>
-                <td class="hover"><%= apply.username %></td>
-                <td class="hover"><%= apply.phone %></td>
-                <td class="hover"><%= apply.location %></td>
-                <td class="hover"><%= apply.address %></td>
+                <td class="hover"><%= apartment.createdBy %></td>
+                <td class="hover"><%= apartment.phone %></td>
+                <td class="hover"><%= apartment.location %></td>
+                <td class="hover <%= apartment.verification === 'verified' ? 'status-green-bg' : (apartment.verification === 'not-verified' ? 'status-red-bg' : '') %>"><%= apartment.verification %></td>
                
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
-                    <a href="/edit-application/<%= apply._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
-                    <a href="#" onclick="deleteApplication('<%= apply._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
-                    <a href="#"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
+                    <a href="/verify-update-apartment/<%= apartment._id %>"><i class="fas fa-edit text-green-500 cursor-pointer"></i></a>
+                    <a href="#" onclick="deleteUser('<%= user._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
+                    <a href="/all-apartments"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
             </tr>
@@ -129,10 +127,10 @@
     </div>
 </body>
 <script>
-    function deleteApplication(username) {
-        if (confirm('Are you sure you want to delete this application?')) {
+    function deleteUser(username) {
+        if (confirm('Are you sure you want to delete this user?')) {
             // Redirect to the delete route with the storage ID
-            window.location.href = "/delete-application/" + username + "?_method=DELETE";
+            window.location.href = "/delete-user/" + username + "?_method=DELETE";
         }
     }
    </script>
